--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Other
 .allure
 .idea
+*.iml
 *.log
 target
 build
@@ -27,4 +28,3 @@ allure-results
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.idea/workspace.xml
